# DocExtract-Studio

./: .gitignore  LICENSE  README.md  pyproject.toml
src/pdf_extractor/: __init__.py  main.py
src/pdf_extractor/app/: batch_controller.py  batch_result_dialog.py  extraction_result_table.py  field_panel.py  main_window.py  page_template_dialog.py  pdf_page_canvas.py  pdf_rename_dialog.py  pdf_split_dialog.py  pdf_viewer.py  template_controller.py
src/pdf_extractor/core/: __init__.py  batch_service.py  extraction_service.py  field_manager.py  page_template_service.py  pdf_rename_service.py  pdf_service.py  pdf_split_service.py  template_service.py
src/pdf_extractor/exporters/: __init__.py  base.py  csv_exporter.py  excel_exporter.py
src/pdf_extractor/models/: __init__.py  batch_result.py  extraction_field.py  extraction_result.py  extraction_template.py  field_region.py  page_template_result.py
src/pdf_extractor/ocr/: __init__.py  base.py  tesseract_service.py
src/pdf_extractor/resources/: __init__.py
src/pdf_extractor/utils/: app_icon.py  logging_config.py
tests/: conftest.py  test_batch_service.py  test_exporters.py  test_extraction_service.py  test_field_manager.py  test_field_region.py  test_main_window.py  test_page_template_dialog.py  test_page_template_service.py  test_pdf_rename_dialog.py  test_pdf_rename_service.py  test_pdf_service.py  test_pdf_split_dialog.py  test_pdf_split_service.py  test_template_service.py  test_tesseract_service.py
