[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "visual-pdf-data-extractor"
version = "0.1.0"
description = "Desktop application for visually mapping and extracting data from PDF documents."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Visual PDF Data Extractor contributors" },
]
dependencies = [
    "PyMuPDF>=1.24,<2",
    "PySide6>=6.6,<7",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
]

[project.scripts]
visual-pdf-extractor = "pdf_extractor.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
